--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li class="site-navigation-item"><a href="brand.html">Бренд</a></li>
             <li class="site-navigation-item"><a href="test.html">Тест</a></li>
             <li class="site-navigation-item"><a href="words.html">Слова</a></li>
+            <li class="site-navigation-item"><a href="coursework/coursework.html">Курсовая</a></li>
         </ul>
     </nav>
 </header>
