--- a/index.html
+++ b/index.html
@@ -10,20 +10,31 @@
 <body>
 <header class="main-header">
     <nav class="main-nav">
-        <a class="logo" href="#">
+        <a class="logo" href="index.html">
             <div class="logo-css">
                 <div class="logo-circle"></div>
                 <div class="letter_N"></div>
                 <div class="letter_D"></div>
             </div>
-            <h1 class="logo-pro">Nikita Danilin</h1></a>
+            <h1 class="logo-pro">Nikita Danilin</h1>
+        </a>
         <ul class="site-nav">
-            <li class="site-navigation-item"><a href="index.html">Домой</a></li>
-            <li class="site-navigation-item"><a href="picture.html">Рисунок</a></li>
-            <li class="site-navigation-item"><a href="brand.html">Бренд</a></li>
-            <li class="site-navigation-item"><a href="test.html">Тест</a></li>
-            <li class="site-navigation-item"><a href="words.html">Слова</a></li>
-            <li class="site-navigation-item"><a href="coursework/coursework.html">Курсовая</a></li>
+
+            <li class="site-navigation-item">
+                <a href="index.html"><span>Главная</span></a>
+            </li>
+
+            <li class="site-navigation-item menu-dropdown">
+                <a href="#"><span>Работы</span></a>
+                <ul class="dropdown-list">
+                    <li><a href="picture.html">Рисунок</a></li>
+                    <li><a href="brand.html">Бренд</a></li>
+                    <li><a href="test.html">Тест</a></li>
+                    <li><a href="words.html">Слова</a></li>
+                    <li><a href="coursework/coursework.html">Курсовая</a></li>
+                </ul>
+            </li>
+
         </ul>
     </nav>
 </header>
